--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "terser": "^5.46.0",
     "vite": "^7.2.4"
   },
   "dependencies": {
